human-intervention-logs/net.minidev:json-smart:2.2/gradle-test/gradle-test-2026-05-21T06-44-07-929266Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: net.minidev:json-smart:2.2
Command: `/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

> Task :compileTestJava FAILED
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:16: error: package net.minidev.json.mapper does not exist
import net.minidev.json.mapper.AMapper;
                              ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:17: error: package net.minidev.json.mapper does not exist
import net.minidev.json.mapper.Mapper;
                              ^
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:25: error: cannot find symbol
        AMapper<AccessibleJsonObject> mapper = Mapper.getMapper(mapType);
        ^
  symbol:   class AMapper
  location: class CollectionMapperInnerMapTypeTest
/home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:25: error: cannot find symbol
        AMapper<AccessibleJsonObject> mapper = Mapper.getMapper(mapType);
                                               ^
  symbol:   variable Mapper
  location: class CollectionMapperInnerMapTypeTest
4 errors

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:25: error: cannot find symbol
          AMapper<AccessibleJsonObject> mapper = Mapper.getMapper(mapType);
          ^
    symbol:   class AMapper
    location: class CollectionMapperInnerMapTypeTest
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:25: error: cannot find symbol
          AMapper<AccessibleJsonObject> mapper = Mapper.getMapper(mapType);
                                                 ^
    symbol:   variable Mapper
    location: class CollectionMapperInnerMapTypeTest
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:16: error: package net.minidev.json.mapper does not exist
  import net.minidev.json.mapper.AMapper;
                                ^
  /home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/tests/src/net.minidev/json-smart/2.2/src/test/java/net_minidev/json_smart/CollectionMapperInnerMapTypeTest.java:17: error: package net.minidev.json.mapper does not exist
  import net.minidev.json.mapper.Mapper;
                                ^
  4 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 5s
14 actionable tasks: 6 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge10/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/7378-58dfb245/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for net.minidev:json-smart:2.2 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 6s
9 actionable tasks: 1 executed, 8 up-to-date
